# backend

./: .env  .env_template  Cargo.toml  README.md  data.json  init_schema.sql  register.json  register2.json  repomix-output.xml
migrations/: 20251230160043_init_schema.down.sql  20251230160043_init_schema.up.sql
src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  validation.rs
